parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> prog
Rule 1     prog -> stmts
Rule 2     stmts -> statement stmts
Rule 3     stmts -> statement
Rule 4     statement -> INTDCL NAME ;
Rule 5     statement -> INTDCL NAME = expression ;
Rule 6     statement -> FLOATDCL NAME ;
Rule 7     statement -> FLOATDCL NAME = expression ;
Rule 8     statement -> BOOLDCL NAME ;
Rule 9     statement -> BOOLDCL NAME = boolean_expression ;
Rule 10    statement -> PRINT expression ;
Rule 11    statement -> IF LPAREN boolean_expression RPAREN { stmts } elifs else
Rule 12    elifs -> elif elifs
Rule 13    elifs -> elif
Rule 14    elif -> ELIF LPAREN boolean_expression RPAREN { stmts }
Rule 15    elif -> empty
Rule 16    else -> ELSE { stmts }
Rule 17    else -> empty
Rule 18    statement -> WHILE LPAREN boolean_expression RPAREN { stmts }
Rule 19    statement -> FOR LPAREN statement boolean_expression ; step RPAREN { stmts }
Rule 20    step -> NAME PLUS = expression
Rule 21    step -> NAME MINUS = expression
Rule 22    step -> NAME TIMES = expression
Rule 23    step -> NAME DIVIDE = expression
Rule 24    step -> NAME PLUS PLUS
Rule 25    step -> NAME MINUS MINUS
Rule 26    statement -> NAME = expression ;
Rule 27    expression -> LPAREN expression RPAREN
Rule 28    expression -> expression PLUS expression
Rule 29    expression -> expression MINUS expression
Rule 30    expression -> expression TIMES expression
Rule 31    expression -> expression DIVIDE expression
Rule 32    expression -> expression POW expression
Rule 33    expression -> INUMBER
Rule 34    expression -> MINUS INUMBER
Rule 35    expression -> FNUMBER
Rule 36    expression -> MINUS FNUMBER
Rule 37    expression -> boolean_expression
Rule 38    boolean_expression -> LPAREN boolean_expression RPAREN
Rule 39    boolean_expression -> boolean_expression AND boolean_expression
Rule 40    boolean_expression -> boolean_expression OR boolean_expression
Rule 41    boolean_expression -> comparison
Rule 42    boolean_expression -> boolean_val
Rule 43    comparison -> expression EQ expression
Rule 44    comparison -> expression NE expression
Rule 45    comparison -> expression LT expression
Rule 46    comparison -> expression LE expression
Rule 47    comparison -> expression GT expression
Rule 48    comparison -> expression GE expression
Rule 49    boolean_val -> boolexp
Rule 50    boolean_val -> NAME
Rule 51    boolexp -> BOOLVAL
Rule 52    expression -> NAME
Rule 53    empty -> <empty>

Terminals, with rules where they appear

;                    : 4 5 6 7 8 9 10 19 26
=                    : 5 7 9 20 21 22 23 26
AND                  : 39
BOOLDCL              : 8 9
BOOLVAL              : 51
DIVIDE               : 23 31
ELIF                 : 14
ELSE                 : 16
EQ                   : 43
FLOATDCL             : 6 7
FNUMBER              : 35 36
FOR                  : 19
GE                   : 48
GT                   : 47
IF                   : 11
INTDCL               : 4 5
INUMBER              : 33 34
LE                   : 46
LPAREN               : 11 14 18 19 27 38
LT                   : 45
MINUS                : 21 25 25 29 34 36
NAME                 : 4 5 6 7 8 9 20 21 22 23 24 25 26 50 52
NE                   : 44
OR                   : 40
PLUS                 : 20 24 24 28
POW                  : 32
PRINT                : 10
RPAREN               : 11 14 18 19 27 38
TIMES                : 22 30
WHILE                : 18
error                : 
{                    : 11 14 16 18 19
}                    : 11 14 16 18 19

Nonterminals, with rules where they appear

boolean_expression   : 9 11 14 18 19 37 38 39 39 40 40
boolean_val          : 42
boolexp              : 49
comparison           : 41
elif                 : 12 13
elifs                : 11 12
else                 : 11
empty                : 15 17
expression           : 5 7 10 20 21 22 23 26 27 28 28 29 29 30 30 31 31 32 32 43 43 44 44 45 45 46 46 47 47 48 48
prog                 : 0
statement            : 2 3 19
step                 : 19
stmts                : 1 2 11 14 16 18 19

Parsing method: LALR

state 0

    (0) S' -> . prog
    (1) prog -> . stmts
    (2) stmts -> . statement stmts
    (3) stmts -> . statement
    (4) statement -> . INTDCL NAME ;
    (5) statement -> . INTDCL NAME = expression ;
    (6) statement -> . FLOATDCL NAME ;
    (7) statement -> . FLOATDCL NAME = expression ;
    (8) statement -> . BOOLDCL NAME ;
    (9) statement -> . BOOLDCL NAME = boolean_expression ;
    (10) statement -> . PRINT expression ;
    (11) statement -> . IF LPAREN boolean_expression RPAREN { stmts } elifs else
    (18) statement -> . WHILE LPAREN boolean_expression RPAREN { stmts }
    (19) statement -> . FOR LPAREN statement boolean_expression ; step RPAREN { stmts }
    (26) statement -> . NAME = expression ;

    INTDCL          shift and go to state 4
    FLOATDCL        shift and go to state 6
    BOOLDCL         shift and go to state 7
    PRINT           shift and go to state 8
    IF              shift and go to state 9
    WHILE           shift and go to state 10
    FOR             shift and go to state 11
    NAME            shift and go to state 5

    prog                           shift and go to state 1
    stmts                          shift and go to state 2
    statement                      shift and go to state 3

state 1

    (0) S' -> prog .



state 2

    (1) prog -> stmts .

    $end            reduce using rule 1 (prog -> stmts .)


state 3

    (2) stmts -> statement . stmts
    (3) stmts -> statement .
    (2) stmts -> . statement stmts
    (3) stmts -> . statement
    (4) statement -> . INTDCL NAME ;
    (5) statement -> . INTDCL NAME = expression ;
    (6) statement -> . FLOATDCL NAME ;
    (7) statement -> . FLOATDCL NAME = expression ;
    (8) statement -> . BOOLDCL NAME ;
    (9) statement -> . BOOLDCL NAME = boolean_expression ;
    (10) statement -> . PRINT expression ;
    (11) statement -> . IF LPAREN boolean_expression RPAREN { stmts } elifs else
    (18) statement -> . WHILE LPAREN boolean_expression RPAREN { stmts }
    (19) statement -> . FOR LPAREN statement boolean_expression ; step RPAREN { stmts }
    (26) statement -> . NAME = expression ;

    $end            reduce using rule 3 (stmts -> statement .)
    }               reduce using rule 3 (stmts -> statement .)
    INTDCL          shift and go to state 4
    FLOATDCL        shift and go to state 6
    BOOLDCL         shift and go to state 7
    PRINT           shift and go to state 8
    IF              shift and go to state 9
    WHILE           shift and go to state 10
    FOR             shift and go to state 11
    NAME            shift and go to state 5

    statement                      shift and go to state 3
    stmts                          shift and go to state 12

state 4

    (4) statement -> INTDCL . NAME ;
    (5) statement -> INTDCL . NAME = expression ;

    NAME            shift and go to state 13


state 5

    (26) statement -> NAME . = expression ;

    =               shift and go to state 14


state 6

    (6) statement -> FLOATDCL . NAME ;
    (7) statement -> FLOATDCL . NAME = expression ;

    NAME            shift and go to state 15


state 7

    (8) statement -> BOOLDCL . NAME ;
    (9) statement -> BOOLDCL . NAME = boolean_expression ;

    NAME            shift and go to state 16


state 8

    (10) statement -> PRINT . expression ;
    (27) expression -> . LPAREN expression RPAREN
    (28) expression -> . expression PLUS expression
    (29) expression -> . expression MINUS expression
    (30) expression -> . expression TIMES expression
    (31) expression -> . expression DIVIDE expression
    (32) expression -> . expression POW expression
    (33) expression -> . INUMBER
    (34) expression -> . MINUS INUMBER
    (35) expression -> . FNUMBER
    (36) expression -> . MINUS FNUMBER
    (37) expression -> . boolean_expression
    (52) expression -> . NAME
    (38) boolean_expression -> . LPAREN boolean_expression RPAREN
    (39) boolean_expression -> . boolean_expression AND boolean_expression
    (40) boolean_expression -> . boolean_expression OR boolean_expression
    (41) boolean_expression -> . comparison
    (42) boolean_expression -> . boolean_val
    (43) comparison -> . expression EQ expression
    (44) comparison -> . expression NE expression
    (45) comparison -> . expression LT expression
    (46) comparison -> . expression LE expression
    (47) comparison -> . expression GT expression
    (48) comparison -> . expression GE expression
    (49) boolean_val -> . boolexp
    (50) boolean_val -> . NAME
    (51) boolexp -> . BOOLVAL

    LPAREN          shift and go to state 18
    INUMBER         shift and go to state 20
    MINUS           shift and go to state 19
    FNUMBER         shift and go to state 21
    NAME            shift and go to state 23
    BOOLVAL         shift and go to state 27

    expression                     shift and go to state 17
    boolean_expression             shift and go to state 22
    comparison                     shift and go to state 24
    boolean_val                    shift and go to state 25
    boolexp                        shift and go to state 26

state 9

    (11) statement -> IF . LPAREN boolean_expression RPAREN { stmts } elifs else

    LPAREN          shift and go to state 28


state 10

    (18) statement -> WHILE . LPAREN boolean_expression RPAREN { stmts }

    LPAREN          shift and go to state 29


state 11

    (19) statement -> FOR . LPAREN statement boolean_expression ; step RPAREN { stmts }

    LPAREN          shift and go to state 30


state 12

    (2) stmts -> statement stmts .

    $end            reduce using rule 2 (stmts -> statement stmts .)
    }               reduce using rule 2 (stmts -> statement stmts .)


state 13

    (4) statement -> INTDCL NAME . ;
    (5) statement -> INTDCL NAME . = expression ;

    ;               shift and go to state 31
    =               shift and go to state 32


state 14

    (26) statement -> NAME = . expression ;
    (27) expression -> . LPAREN expression RPAREN
    (28) expression -> . expression PLUS expression
    (29) expression -> . expression MINUS expression
    (30) expression -> . expression TIMES expression
    (31) expression -> . expression DIVIDE expression
    (32) expression -> . expression POW expression
    (33) expression -> . INUMBER
    (34) expression -> . MINUS INUMBER
    (35) expression -> . FNUMBER
    (36) expression -> . MINUS FNUMBER
    (37) expression -> . boolean_expression
    (52) expression -> . NAME
    (38) boolean_expression -> . LPAREN boolean_expression RPAREN
    (39) boolean_expression -> . boolean_expression AND boolean_expression
    (40) boolean_expression -> . boolean_expression OR boolean_expression
    (41) boolean_expression -> . comparison
    (42) boolean_expression -> . boolean_val
    (43) comparison -> . expression EQ expression
    (44) comparison -> . expression NE expression
    (45) comparison -> . expression LT expression
    (46) comparison -> . expression LE expression
    (47) comparison -> . expression GT expression
    (48) comparison -> . expression GE expression
    (49) boolean_val -> . boolexp
    (50) boolean_val -> . NAME
    (51) boolexp -> . BOOLVAL

    LPAREN          shift and go to state 18
    INUMBER         shift and go to state 20
    MINUS           shift and go to state 19
    FNUMBER         shift and go to state 21
    NAME            shift and go to state 23
    BOOLVAL         shift and go to state 27

    expression                     shift and go to state 33
    boolean_expression             shift and go to state 22
    comparison                     shift and go to state 24
    boolean_val                    shift and go to state 25
    boolexp                        shift and go to state 26

state 15

    (6) statement -> FLOATDCL NAME . ;
    (7) statement -> FLOATDCL NAME . = expression ;

    ;               shift and go to state 34
    =               shift and go to state 35


state 16

    (8) statement -> BOOLDCL NAME . ;
    (9) statement -> BOOLDCL NAME . = boolean_expression ;

    ;               shift and go to state 36
    =               shift and go to state 37


state 17

    (10) statement -> PRINT expression . ;
    (28) expression -> expression . PLUS expression
    (29) expression -> expression . MINUS expression
    (30) expression -> expression . TIMES expression
    (31) expression -> expression . DIVIDE expression
    (32) expression -> expression . POW expression
    (43) comparison -> expression . EQ expression
    (44) comparison -> expression . NE expression
    (45) comparison -> expression . LT expression
    (46) comparison -> expression . LE expression
    (47) comparison -> expression . GT expression
    (48) comparison -> expression . GE expression

    ;               shift and go to state 38
    PLUS            shift and go to state 39
    MINUS           shift and go to state 40
    TIMES           shift and go to state 41
    DIVIDE          shift and go to state 42
    POW             shift and go to state 43
    EQ              shift and go to state 44
    NE              shift and go to state 45
    LT              shift and go to state 46
    LE              shift and go to state 47
    GT              shift and go to state 48
    GE              shift and go to state 49


state 18

    (27) expression -> LPAREN . expression RPAREN
    (38) boolean_expression -> LPAREN . boolean_expression RPAREN
    (27) expression -> . LPAREN expression RPAREN
    (28) expression -> . expression PLUS expression
    (29) expression -> . expression MINUS expression
    (30) expression -> . expression TIMES expression
    (31) expression -> . expression DIVIDE expression
    (32) expression -> . expression POW expression
    (33) expression -> . INUMBER
    (34) expression -> . MINUS INUMBER
    (35) expression -> . FNUMBER
    (36) expression -> . MINUS FNUMBER
    (37) expression -> . boolean_expression
    (52) expression -> . NAME
    (38) boolean_expression -> . LPAREN boolean_expression RPAREN
    (39) boolean_expression -> . boolean_expression AND boolean_expression
    (40) boolean_expression -> . boolean_expression OR boolean_expression
    (41) boolean_expression -> . comparison
    (42) boolean_expression -> . boolean_val
    (43) comparison -> . expression EQ expression
    (44) comparison -> . expression NE expression
    (45) comparison -> . expression LT expression
    (46) comparison -> . expression LE expression
    (47) comparison -> . expression GT expression
    (48) comparison -> . expression GE expression
    (49) boolean_val -> . boolexp
    (50) boolean_val -> . NAME
    (51) boolexp -> . BOOLVAL

    LPAREN          shift and go to state 18
    INUMBER         shift and go to state 20
    MINUS           shift and go to state 19
    FNUMBER         shift and go to state 21
    NAME            shift and go to state 23
    BOOLVAL         shift and go to state 27

    expression                     shift and go to state 50
    boolean_expression             shift and go to state 51
    comparison                     shift and go to state 24
    boolean_val                    shift and go to state 25
    boolexp                        shift and go to state 26

state 19

    (34) expression -> MINUS . INUMBER
    (36) expression -> MINUS . FNUMBER

    INUMBER         shift and go to state 52
    FNUMBER         shift and go to state 53


state 20

    (33) expression -> INUMBER .

    ;               reduce using rule 33 (expression -> INUMBER .)
    PLUS            reduce using rule 33 (expression -> INUMBER .)
    MINUS           reduce using rule 33 (expression -> INUMBER .)
    TIMES           reduce using rule 33 (expression -> INUMBER .)
    DIVIDE          reduce using rule 33 (expression -> INUMBER .)
    POW             reduce using rule 33 (expression -> INUMBER .)
    EQ              reduce using rule 33 (expression -> INUMBER .)
    NE              reduce using rule 33 (expression -> INUMBER .)
    LT              reduce using rule 33 (expression -> INUMBER .)
    LE              reduce using rule 33 (expression -> INUMBER .)
    GT              reduce using rule 33 (expression -> INUMBER .)
    GE              reduce using rule 33 (expression -> INUMBER .)
    RPAREN          reduce using rule 33 (expression -> INUMBER .)
    AND             reduce using rule 33 (expression -> INUMBER .)
    OR              reduce using rule 33 (expression -> INUMBER .)


state 21

    (35) expression -> FNUMBER .

    ;               reduce using rule 35 (expression -> FNUMBER .)
    PLUS            reduce using rule 35 (expression -> FNUMBER .)
    MINUS           reduce using rule 35 (expression -> FNUMBER .)
    TIMES           reduce using rule 35 (expression -> FNUMBER .)
    DIVIDE          reduce using rule 35 (expression -> FNUMBER .)
    POW             reduce using rule 35 (expression -> FNUMBER .)
    EQ              reduce using rule 35 (expression -> FNUMBER .)
    NE              reduce using rule 35 (expression -> FNUMBER .)
    LT              reduce using rule 35 (expression -> FNUMBER .)
    LE              reduce using rule 35 (expression -> FNUMBER .)
    GT              reduce using rule 35 (expression -> FNUMBER .)
    GE              reduce using rule 35 (expression -> FNUMBER .)
    RPAREN          reduce using rule 35 (expression -> FNUMBER .)
    AND             reduce using rule 35 (expression -> FNUMBER .)
    OR              reduce using rule 35 (expression -> FNUMBER .)


state 22

    (37) expression -> boolean_expression .
    (39) boolean_expression -> boolean_expression . AND boolean_expression
    (40) boolean_expression -> boolean_expression . OR boolean_expression

  ! shift/reduce conflict for AND resolved as shift
  ! shift/reduce conflict for OR resolved as shift
    ;               reduce using rule 37 (expression -> boolean_expression .)
    PLUS            reduce using rule 37 (expression -> boolean_expression .)
    MINUS           reduce using rule 37 (expression -> boolean_expression .)
    TIMES           reduce using rule 37 (expression -> boolean_expression .)
    DIVIDE          reduce using rule 37 (expression -> boolean_expression .)
    POW             reduce using rule 37 (expression -> boolean_expression .)
    EQ              reduce using rule 37 (expression -> boolean_expression .)
    NE              reduce using rule 37 (expression -> boolean_expression .)
    LT              reduce using rule 37 (expression -> boolean_expression .)
    LE              reduce using rule 37 (expression -> boolean_expression .)
    GT              reduce using rule 37 (expression -> boolean_expression .)
    GE              reduce using rule 37 (expression -> boolean_expression .)
    RPAREN          reduce using rule 37 (expression -> boolean_expression .)
    AND             shift and go to state 54
    OR              shift and go to state 55

  ! AND             [ reduce using rule 37 (expression -> boolean_expression .) ]
  ! OR              [ reduce using rule 37 (expression -> boolean_expression .) ]


state 23

    (52) expression -> NAME .
    (50) boolean_val -> NAME .
